--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			</div>
 			<div class="buttons-wrapper">
 				<div class="row drop">
-					<a class="waves-effect waves-light btn hoverable mg-rg grey darken-3" id="portal">Go to Portfolio</a>
+					<a href="Portfolio.html" class="waves-effect waves-light btn hoverable mg-rg grey darken-3" id="portal">Go to Portfolio</a>
 				</div>
 			</div>
 		</body>
