--- a/Portfolio.html
+++ b/Portfolio.html
@@ -27,18 +27,15 @@
 
     <body>
         
-        <div class="navbar">
+        <div class="navbar z-depth-5">
               <nav>
-                  <div class="nav wrapper grey darken 4 z-depth-2">
-                      <a href="#" class="brand logo thinner" style="margin-left: 15px; font-size: 1.6em;">Hassaan Nadeem</a>
-                      <ul id="nav mobile" class="right hide on med and down">
-                          <li><a href="#">About Me</a></li>
-                      </ul>
+                  <div class="nav wrapper teal lighten-3 z-depth-5">
+                      <a href="#" class="brand logo thinner" style="margin-left: 3%; font-size: 1.8em;">Hassaan Nadeem</a>
                   </div>
               </nav>
           </div>
         
-        <main id="main">
+        <main id="main" style="background: url('./images/background.jpg') center center repeat;">
             <br>
             <div class="row col l12 m12 s12" id="mainRow">
 
@@ -53,7 +50,7 @@
            <!-- All images are created via javascript -->
 
         </main>
-        <footer class="page-footer grey darken 4">
+        <footer class="page-footer teal lighten-3">
             <div class="container">
                 <div class="row">                    
                     <div class="center">
