Fixed bug from refactoring images

--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
 	<div class="slider fullscreen">
 		<ul class="slides">
 			<li>
-				<img src="./images/img_7.jpg">
+				<img src="./images/img (7).jpg">
 			</li>
 			<li>
-				<img src="./images/img_49.jpg">
+				<img src="./images/img (3).jpg">
 			</li>
 			<li>
-				<img src="./images/img_6.jpg">
+				<img src="./images/img (6).jpg">
 			</li>
 			<li>
-				<img src="./images/img_22.jpg">
+				<img src="./images/img (22).jpg">
 			</li>
 		</ul>
 	</div>
