--- a/index.html
+++ b/index.html
@@ -27,27 +27,23 @@
 	<div class="slider fullscreen">
 		<ul class="slides">
 			<li>
-				<img src="./images/img (7).jpg">
+				<img src="./images/img (16).jpg">
 			</li>
 			<li>
-				<img src="./images/img (3).jpg">
+				<img src="./images/img (14).jpg">
+			</li>
+			<li>
+				<img src="./images/img (23).jpg">
 			</li>
 			<li>
 				<img src="./images/img (6).jpg">
 			</li>
-			<li>
-				<img src="./images/img (22).jpg">
-			</li>
 		</ul>
 	</div>
+	
 	<div class="title-wrapper">
 		<div class="row top">
-			<img class="circle z-depth-5 transparence" src="./images/logo.png">
-		</div>
-	</div>
-	<div class="title-wrapper">
-		<div class="row top">
-			<img class="circle z-depth-5 transpare" src="./images/logo_Text.png">
+			<img class="circle z-depth-5 bg-white" src="./images/logo_Text.png">
 		</div>
 	</div>
 	<div class="buttons-wrapper">
